# resource-expert-MAS-system

./: .gitignore  README.md  pyproject.toml
src/: main.py  test.ipynb  test_creation.ipynb
src/agentic_copilot/config/: __init__.py  settings.py
src/agentic_copilot/models/utils/: agent_DOMs.py  agent_base.py  agent_tracer.py  agents_util.py  llm_utils.py
src/agentic_copilot/workflows/: events.py  generate_response.py  utterance_checker.py  workflow.py
src/data/: adversarial_model.sav  competition_model.sav  generate_synth_data.ipynb  relevancy_model.sav  scenarios.csv  synth_invoice_data_v2.csv
src/data/datastream_name_indexes/client0/: default__vector_store.json  docstore.json  index_store.json
src/data/datastream_name_indexes/client3/: default__vector_store.json  (+2 more)
src/data/expected/: all_expenses_removed_2020.json  america_done_2024.json  carbon_footprint.json  cybersecurity_ip_protection_usa_2022.json  datastream_query.json  difference_of_means.json  difference_of_means_need_input.json  energy_usage_western_sites.json  forecasted_product_returns_defect_rate_2022_2023.json  in_process_by_as.json  invoice_query.json  max_mean_var.json  need_input_before.json  product_return_percentage_growth.json  product_returns_jan2023_tocantins.json  scope_3_emission_complex.json  sustainability_goals.json
src/data/inputs/: carbon_footprint.json  cybersecurity_ip_protection_usa_2022.json  energy_usage_western_sites_continuation_0.json  invoices_this_year.json
src/data/research_material/: walmart_esg.txt
src/tests/: reliability_testing.py  testing_utils.py
(+16 files in other folders)
